# fuse-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: README.md  chunk-search-rayon.rs  chunk-search.rs  fuseable-search.rs  iterable-search.rs  simple-search.rs
examples/search-bar/: Cargo.toml
examples/search-bar/src/: main.rs
examples/search_bar/: Cargo.toml
examples/search_bar/src/: main.rs
src/: lib.rs  swiftcom.rs  tests.rs  utils.rs
