[package]
name = "fuse-rust"
version = "0.3.0"
authors = ["Blaine <rishi1998@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/fuse-rust"
repository = "https://github.com/Blakeinstein/fuse-rust"
homepage = "https://github.com/Blakeinstein/fuse-rust"
categories = ["algorithms", "text-processing", "gui"]
keywords = ["weighted-search", "search", "bitap", "fuzzy-search", "fuzzy-matching"]
description = """
Fuse is a super lightweight library which provides a simple way to do fuzzy searching.
Fuse-Rust is a port of Fuse-Swift, written purely in rust.
"""

[dependencies]
crossbeam-utils = { version = "0.8.5", optional = true }

[features]
async = [ "crossbeam-utils" ]

[[example]]
name = "chunk-search"
required-features = ["async"]