[package]
name = "fuse-rust"
version = "0.4.0"
authors = ["Blaine <rishi1998@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/fuse-rust"
repository = "https://github.com/Blakeinstein/fuse-rust"
homepage = "https://github.com/Blakeinstein/fuse-rust"
categories = ["algorithms", "text-processing", "gui"]
keywords = [
  "weighted-search",
  "search",
  "bitap",
  "fuzzy-search",
  "fuzzy-matching",
]
description = """
Fuse is a super lightweight library which provides a simple way to do fuzzy searching.
Fuse-Rust is a port of Fuse-Swift, written purely in rust.
"""

[dependencies]
crossbeam-utils = { version = "0.8", optional = true }
rayon = { version = "1", optional = true }

[features]
default = ["rayon"]
async = ["crossbeam-utils"]
rayon = ["dep:rayon"]

[workspace]
members = ["examples/search-bar"]

[[example]]
name = "chunk-search"
required-features = ["async"]
